objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACL_Holder_Licence_you_operate_under__c</fullName>
        <label>ACL Holder (Licence you operate under)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_adverse_current_future_obligations__c</fullName>
        <label>Any adverse current/future obligations?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_a_first_time_home_buyer__c</fullName>
        <label>Are you a first time home buyer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Australian_Credit_License_Number__c</fullName>
        <label>Australian Credit License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Loan_Amount_Verification__c</fullName>
        <label>Auto Loan Amount Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$50-$74</fullName>
                </value>
                <value>
                    <fullName>$75-$99</fullName>
                </value>
                <value>
                    <fullName>$100-$124</fullName>
                </value>
                <value>
                    <fullName>$125-$149</fullName>
                </value>
                <value>
                    <fullName>None of the Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Loan_Verification__c</fullName>
        <label>Auto Loan Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>nCino Financial</fullName>
                </value>
                <value>
                    <fullName>Nissan Financial</fullName>
                </value>
                <value>
                    <fullName>None of the Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Accreditation__c</fullName>
        <label>Broker Accreditation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Loan Accredited</fullName>
                </value>
                <value>
                    <fullName>Commercial Accredited</fullName>
                </value>
                <value>
                    <fullName>Consumer Accredited</fullName>
                </value>
                <value>
                    <fullName>Deposit Account Opening Accredited</fullName>
                </value>
                <value>
                    <fullName>Equipment &amp; Leasing Accredited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Status__c</fullName>
        <label>Broker Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Broker Qualification</fullName>
                    <default>true</default>
                    <label>Pending Broker Qualification</label>
                </value>
                <value>
                    <fullName>Certified Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Access__c</fullName>
        <description>Used on Card Application</description>
        <label>Cash Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Companies_House_ID__c</fullName>
        <description>The ID from Companies House from the UK for Officers of Entities</description>
        <externalId>true</externalId>
        <label>Companies House ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Age__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate)/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Formula_Field_for_Forms_Gen__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is for taking email from link to text for forms gen purposes.</inlineHelpText>
        <label>Email Formula Field for Forms Gen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Phone__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>Employment Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employment_Start_Date__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unemployed with Income</fullName>
                </value>
                <value>
                    <fullName>Unemployed with No Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Income__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>Gross Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_bankrupt__c</fullName>
        <label>Have you ever been bankrupt?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>ID Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Type__c</fullName>
        <label>Identification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Driver&apos;s License</fullName>
                </value>
                <value>
                    <fullName>State Issued ID</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Mexican Consular</fullName>
                </value>
                <value>
                    <fullName>International Driver&apos;s Licence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_date_of_discharge__c</fullName>
        <label>If yes, date of discharge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Income_Expense_changes_in_12_months__c</fullName>
        <label>Income/Expense changes in 12 months?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Individual_Spending_Limit__c</fullName>
        <description>Used on Card Application</description>
        <label>Individual Spending Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Demo_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Demo Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Age_of_Dependents__c</fullName>
        <description>The user populates this text field to list the age of the dependents in the borrower’s household. By default, this field is blank.</description>
        <inlineHelpText>Enter the ages of the dependents in your household.</inlineHelpText>
        <label>Age of Dependents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Aliases__c</fullName>
        <description>The user populates this text field to record all of the borrower’s possible aliases. By default, this field is blank.</description>
        <inlineHelpText>Enter all of the borrower’s possible aliases in this field.</inlineHelpText>
        <label>Aliases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Income__c</fullName>
        <description>Users populate this optional currency field with the applicant&apos;s annual income. By default, it is blank.</description>
        <inlineHelpText>Enter the applicant&apos;s annual income.</inlineHelpText>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Country_of_Citizenship__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s country of citizenship.</description>
        <label>Country of Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Country_of_Residence__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s country of residence.</description>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Is.</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Drivers_License__c</fullName>
        <description>This field is optional and manually updated. This field functionality is tied to and extended functionality of this field is used in credit reporting. This field should be filled in if you are using the Credit Reporting extensions.</description>
        <label>Drivers License</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Email_Type__c</fullName>
        <description>This field is optional. The user manually populates this field. It describes the customer&apos;s type of email.</description>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Employer_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the primary employer for the account holder.</description>
        <inlineHelpText>The name of the primary employer for the account holder.</inlineHelpText>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Employer_State__c</fullName>
        <description>This field is optional and manually updated. The state of the primary employer for the account holder.</description>
        <inlineHelpText>The state of the primary employer for the account holder.</inlineHelpText>
        <label>Employer State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Birth_Certificate__c</fullName>
        <description>This field is optional and manually updated. Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Birth Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Certifying_Acceptance_Date__c</fullName>
        <description>This field is optional and manually updated. The date of the financial institution&apos;s Certifying Acceptance Agent agreement with the IRS.</description>
        <inlineHelpText>The date of the financial institution&apos;s Certifying Acceptance Agent agreement with the IRS.</inlineHelpText>
        <label>Form W7 Certifying Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_City_State__c</fullName>
        <description>This field is optional and manually updated. The city and state where the institution that the account holder is attending or working at is located if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The city and state where the institution that the account holder is attending or working at is located if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College City State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_Duration__c</fullName>
        <description>This field is optional and manually updated. A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Delegate_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 Delegate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Delegate_Relationship_Type__c</fullName>
        <description>This field is optional and manually updated. The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 Delegate Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Court-appointed Guardian</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Exception_1a_Partnership_EIN__c</fullName>
        <description>This field is optional and manually updated. The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</description>
        <inlineHelpText>The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</inlineHelpText>
        <label>Form W7 Exception 1a Partnership EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Foreign_DL_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually updated. Foreign Drivers License is being used to verify identity (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Drivers License is being used to verify identity (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Foreign DL Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Foreign_Voter_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. Foreign Voters Registration Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Voters Registration Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Foreign Voter ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Medical_Records_ID_Verifies__c</fullName>
        <description>This field is optional and manually updated. Medical Records (valid only for dependents under age 14 or under age 18 if a student) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Medical Records (valid only for dependents under age 14 or under age 18 if a student) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Medical Records ID Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_National_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 National ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Passport_Verifies__c</fullName>
        <description>This field is optional and manually updated. Indicates that the individual&apos;s passport (stand alone document) verifies foreign status identity or both (on IRS form W-7(COA)).</description>
        <inlineHelpText>Indicates that the individual&apos;s passport (stand alone document) verifies foreign status identity or both (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Passport Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
                <value>
                    <fullName>Identity and foreign status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_First_Name__c</fullName>
        <description>This field is optional and manually updated. The first name of account holder&apos;s previous name.</description>
        <inlineHelpText>The first name of account holder&apos;s previous name.</inlineHelpText>
        <label>Form W7 Previous First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_IRSN__c</fullName>
        <description>This field is optional and manually updated. The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</description>
        <inlineHelpText>The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</inlineHelpText>
        <label>Form W7 Previous IRSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_Name__c</fullName>
        <description>This field is optional and manually updated. The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</description>
        <inlineHelpText>The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</inlineHelpText>
        <label>Form W7 Previous Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>